# desafio-est-gio

./: README.md
backend/: main.py  pyproject.toml
backend/core/: db.py
backend/models/: __init__.py  account.py  checking.py  savings.py
backend/models/accounts/: account.py  checking.py  enums.py  savings.py
backend/models/operations/: deposit.py  enums.py  operation.py  transfer.py  withdraw.py
backend/repository/: account_repository.py  operation_repository.py
backend/router/: account_router.py  operation_router.py
backend/schemas/: account_schema.py
backend/service/: account_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: AccountCard.jsx  AccountForm.jsx  AccountList.jsx  Header.jsx  OperationCard.jsx  TransferCard.jsx
