[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Cauan Nascimento",email = "caunas1337@proton.me"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.138.2,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
